--- a/src/lozadagroupcompany/FrameMain.form
+++ b/src/lozadagroupcompany/FrameMain.form
@@ -762,12 +762,13 @@
                                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                                 </Property>
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                                  <Table columnCount="15" rowCount="0">
+                                  <Table columnCount="16" rowCount="0">
                                     <Column editable="false" title="RV Code" type="java.lang.Object"/>
                                     <Column editable="false" title="Payor" type="java.lang.Object"/>
                                     <Column editable="false" title="TIN" type="java.lang.Object"/>
                                     <Column editable="false" title="Deposited To" type="java.lang.Object"/>
                                     <Column editable="false" title="Description" type="java.lang.Object"/>
+                                    <Column editable="false" title="Account" type="java.lang.Object"/>
                                     <Column editable="false" title="Particulars" type="java.lang.Object"/>
                                     <Column editable="false" title="Gross Amount" type="java.lang.Object"/>
                                     <Column editable="false" title="VAT" type="java.lang.Object"/>
@@ -782,6 +783,11 @@
                                 </Property>
                                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                                   <TableColumnModel selectionModel="0">
+                                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                                      <Title/>
+                                      <Editor/>
+                                      <Renderer/>
+                                    </Column>
                                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                                       <Title/>
                                       <Editor/>
@@ -1356,12 +1362,13 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="15" rowCount="0">
+                          <Table columnCount="16" rowCount="0">
                             <Column editable="false" title="MW Code" type="java.lang.Object"/>
                             <Column editable="false" title="MR Code" type="java.lang.Object"/>
                             <Column editable="false" title="Charge To" type="java.lang.Object"/>
                             <Column editable="false" title="Purpose" type="java.lang.Object"/>
                             <Column editable="false" title="Destination" type="java.lang.Object"/>
+                            <Column editable="false" title="Account" type="java.lang.Object"/>
                             <Column editable="false" title="Quantity" type="java.lang.Object"/>
                             <Column editable="false" title="Unit" type="java.lang.Object"/>
                             <Column editable="false" title="Unit Cost" type="java.lang.Object"/>
@@ -1376,6 +1383,11 @@
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
@@ -1605,8 +1617,9 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="12" rowCount="0">
+                          <Table columnCount="13" rowCount="0">
                             <Column editable="false" title="MR Code" type="java.lang.Object"/>
+                            <Column editable="false" title="Account" type="java.lang.Object"/>
                             <Column editable="false" title="Supplier" type="java.lang.Object"/>
                             <Column editable="false" title="Quantity" type="java.lang.Object"/>
                             <Column editable="false" title="Unit" type="java.lang.Object"/>
@@ -1622,6 +1635,11 @@
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
